gcc/testsuite/gm2/pim/pass/settest2.mod
MODULE settest2 ;

TYPE BigSet = SET OF [0..10000];
                                                                                
        
BEGIN
        (******)                                               
END settest2.
