gcc/testsuite/gm2/pim/fail/badsyntaxset1.mod
MODULE badsyntaxset1 ;  

TYPE
   foo = SET OF [cat..dog] ;

BEGIN

END badsyntaxset1.
